"Never save password" should blacklist the whole site.

Previously we used the path and element names of the form.
It seems flaky. It can happen that 'Never' doesn't work on the same sign-in page.

Bug: 803428
Change-Id: Ife1d924ef34ef5a7c5f5133547c65ba45407d7a2
Reviewed-on: https://chromium-review.googlesource.com/873635
Reviewed-by: Dominic Battré <battre@chromium.org>
Commit-Queue: Vasilii Sukhanov <vasilii@chromium.org>
Cr-Commit-Position: refs/heads/master@{#530181}
Former-commit-id: 448ec53e7d17989ea8eebe00b34ddeb27b6ea3ae